<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/car_card_margin"
    app:cardCornerRadius="@dimen/car_card_corner_radius"
    app:cardElevation="@dimen/car_card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvSubscriptionPeriod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/car_elements_margin"
            android:layout_marginTop="@dimen/car_elements_margin"
            android:layout_marginEnd="@dimen/car_elements_margin"
            android:text="@string/subscription_text"
            android:textColor="@color/orange"
            android:textSize="@dimen/subscription_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/tvSubscriptionOpportunities"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/car_elements_margin"
            android:layout_marginTop="@dimen/car_elements_margin"
            android:text="@string/subscription_opportunities"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubscriptionPeriod" />

        <TextView
            android:id="@+id/tvFirstOpportunity"
            style="@style/subscriptionOpportunity"
            android:text="@string/opportunity_first"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSubscriptionOpportunities" />

        <TextView
            android:id="@+id/tvSecondOpportunity"
            style="@style/subscriptionOpportunity"
            android:text="@string/opportunity_second"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFirstOpportunity" />

        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/subscription_bottom_place_holder_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSecondOpportunity" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>