<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/car_card_width"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/car_card_corner_radius"
    app:cardElevation="@dimen/car_card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/carName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/car_name_sample"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivCarPicture"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_size"
            android:layout_marginStart="@dimen/car_elements_margin"
            android:layout_marginTop="@dimen/car_elements_margin"
            android:layout_marginEnd="@dimen/car_elements_margin"
            android:src="@drawable/image_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carName" />

        <LinearLayout
            android:id="@+id/llCarCardProductionDate"
            style="@style/carCardLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivCarPicture">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/manufacture" />

            <TextView
                android:id="@+id/carLocation"
                style="@style/carCardTextView"
                android:text="@string/production_date_template" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCarCardPower"
            style="@style/carCardLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llCarCardProductionDate">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/car_engine" />

            <TextView
                android:id="@+id/carDistance"
                style="@style/carCardTextView"
                android:text="@string/car_power_template" />
        </LinearLayout>

        <View
            android:id="@+id/viewPlaceHolder"
            android:layout_width="0dp"
            android:layout_height="@dimen/place_holder_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llCarCardPower" />

        <LinearLayout
            android:id="@+id/llCarAddDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginBottom="@dimen/car_elements_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewPlaceHolder">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_date" />

            <TextView
                android:id="@+id/carAddDate"
                style="@style/carCardTextView"
                android:text="@string/add_date_sample" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>